--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	Mis datos de contacto son:
 	<ul>
 	<li>correo electrónico: angelicamariag3@gmail.com</li>
-	<li>skype: angelicamariag3</li>
+	<li><a href = "https://github.com/">skype: angelicamariag3</a></li>
 	</ul>
 	</p>
 	<a href = ""></a>
