--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<p>
 	Mis datos de contacto son:
 	<ul>
-	<li>correo electrónico: angelicamariag3@gmail.com</li>
+	<li><a href = "">correo electrónico: angelicamariag3@gmail.com</a></li>
 	<li>skype: angelicamariag3</li>
 	</ul>
 	</p>
